Fix RentForm align-self

--- a/client/src/components/CarDetails/CarDetails.css
+++ b/client/src/components/CarDetails/CarDetails.css
@@ -18,8 +18,9 @@
 
 .car-details .right-container {
     max-width: 25em;
-    height: 570.4px;
+    min-height: 570.4px;
     padding: 1em;
+    align-self: flex-start;
     flex: 1 1 auto;
     background-color: #F8F9FA;
     box-shadow: 0 0 1em 0 rgba(0, 0, 0, 0.3);
